--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Imports:
     cluster,
     RColorBrewer,
     broom,
-    ggplot2
+    ggplot2,
+    reshape2,
+    class
 RoxygenNote: 5.0.1
 Suggests: genefilter
