Added first version of marker violin plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(dm)
 export(getSOMgenes)
 export(norm.gini)
 export(visMarkerBar)
+export(visMarkerViolin)
 export(visSOM)
 export(vistSNE)
 export(winsorize)
