Added documentation of recent changes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getSOMgenes)
 export(hvg)
 export(hvg.plot)
 export(norm.gini)
+export(norm.theil.t)
 export(visMarkerBar)
 export(visMarkerViolin)
 export(visSOM)
