Added simulation routine for scSeq experiments.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(hvg)
 export(hvg.plot)
 export(norm.gini)
 export(norm.theil.t)
+export(simulatescSeq)
+export(theils.between)
+export(theils.t)
+export(theils.within)
 export(visMarkerBar)
 export(visMarkerViolin)
 export(visSOM)
