Added fraction of identity plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(EpOverA)
 export(calcFractionOfIdentity)
 export(calcSOM)
 export(clusterSOM)
+export(colorIdentity)
 export(colortSNE)
 export(dm)
 export(getSOMgenes)
