--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(hvg.plot)
 export(norm.gini)
 export(norm.theil.t)
 export(simulatescSeq)
+export(summarizeSOM)
 export(theils.between)
 export(theils.t)
 export(theils.within)
