Added the two init functions to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(dm)
 export(getSOMgenes)
 export(hvg)
 export(hvg.plot)
+export(mapinit)
+export(mapinit2)
 export(norm.gini)
 export(norm.theil.t)
 export(simulatescSeq)
