Added wrapper for astroML.density_estimation.bayesian_blocks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     VGAM,
     quadprog,
     viridis,
-    lsr
+    lsr,
+    rPython
 RoxygenNote: 5.0.1
 Suggests: genefilter,
     lintr
