Fixed bug in discretize.bb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(calcSOM)
 export(clusterSOM)
 export(colorIdentity)
 export(colortSNE)
+export(discretize.bb)
 export(dm)
 export(getSOMgenes)
 export(hvg)
