Added information redundancy for a set S={X1,X2} and a target variable Z.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(hvg)
 export(hvg.plot)
 export(norm.gini)
 export(norm.theil.t)
+export(redundancy)
 export(simulatescSeq)
 export(summarizeSOM)
 export(theils.between)
