--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(colortSNE)
 export(discretize.bb)
 export(dm)
 export(getSOMgenes)
+export(hdbscan)
 export(hvg)
 export(hvg.plot)
 export(norm.gini)
