--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(EpOverA)
 export(bayesian_blocks)
+export(boot.ic)
 export(calcFNWeight)
 export(calcFractionOfIdentity)
 export(calcSOM)
 export(clusterSOM)
 export(colorIdentity)
 export(colortSNE)
+export(computeIC)
 export(discretize.bb)
 export(dm)
 export(getSOMgenes)
