Replaced colortSNE by a more general colorAMap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(calcFNWeight)
 export(calcFractionOfIdentity)
 export(calcSOM)
 export(clusterSOM)
+export(colorAMap)
 export(colorIdentity)
-export(colortSNE)
 export(computeIC)
 export(discretize.bb)
 export(dm)
