Major update on heterogeneity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,19 @@ export(clusterSOM)
 export(colorAMap)
 export(colorIdentity)
 export(computeIC)
+export(cv2.fun)
 export(discretize.bb)
-export(dm)
+export(dropout.fun)
 export(getSOMgenes)
+export(gini.fun)
 export(hdbscan)
+export(heterogeneity)
 export(hvg)
 export(hvg.plot)
-export(norm.gini)
+export(inequality.fun)
 export(norm.theil.t)
+export(normByBin)
+export(normByWindow)
 export(redundancy)
 export(simulatescSeq)
 export(summarizeSOM)
