Added downsampling capabilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(EpOverA)
 export(bayesian_blocks)
 export(boot.ic)
+export(bw.inequality.fun)
 export(calcFNWeight)
 export(calcFractionOfIdentity)
 export(calcSOM)
@@ -29,6 +30,7 @@ export(summarizeSOM)
 export(theils.between)
 export(theils.t)
 export(theils.within)
+export(thin.counts)
 export(visMarkerBar)
 export(visMarkerViolin)
 export(visSOM)
