Preparing for grid-based SOM plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getSOMgenes)
 export(gini.fun)
 export(hdbscan)
 export(heterogeneity)
+export(hexcoords2)
 export(hvg)
 export(hvg.plot)
 export(inequality.fun)
