--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     Hmisc,
     biomaRt,
     dplyr,
-    SingleCellExperiment
+    SingleCellExperiment,
+    data.table
 RoxygenNote: 6.0.1
 Suggests: genefilter,
     rPython,
