Added to Namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(clusterSOM)
 export(colorAMap)
 export(colorIdentity)
 export(computeIC)
+export(createSingleCellExperiment)
 export(cv2.fun)
 export(discretize.bb)
 export(dropout.fun)
