Added Shilhouette plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(inequality.fun)
 export(norm.theil.t)
 export(normByBin)
 export(normByWindow)
+export(plotSilhouette)
 export(simulatescSeq)
 export(summarizeSOM)
 export(theils.between)
