--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(createSingleCellExperiment)
 export(cv2.fun)
 export(discretize.bb)
 export(dropout.fun)
+export(generate_mutationhash)
 export(getSOMgenes)
 export(gini.fun)
 export(heterogeneity)
