--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(EpOverA)
 export(FanoOverA)
+export(add_clustering)
 export(bayesian_blocks)
 export(boot.ic)
 export(bw.inequality.fun)
@@ -18,6 +19,7 @@ export(dropout.fun)
 export(generate_mutationhash)
 export(getSOMgenes)
 export(gini.fun)
+export(hdbscan)
 export(heterogeneity)
 export(hexcoords2)
 export(hvg)
@@ -27,12 +29,14 @@ export(norm.theil.t)
 export(normByBin)
 export(normByWindow)
 export(plotSilhouette)
+export(reduce_dimension)
 export(simulatescSeq)
 export(summarizeSOM)
 export(theils.between)
 export(theils.t)
 export(theils.within)
 export(thin.counts)
+export(umap)
 export(visMarkerBar)
 export(visMarkerViolin)
 export(visSOM)
