Added verb filter_genes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(createSingleCellExperiment)
 export(cv2.fun)
 export(discretize.bb)
 export(dropout.fun)
+export(filter_genes)
 export(generate_mutationhash)
 export(getSOMgenes)
 export(gini.fun)
