Updated transition index functions for work with a SingleCellExperiment object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,15 @@
 export(EpOverA)
 export(FanoOverA)
 export(add_clustering)
-export(boot.ic)
+export(add_transition_index)
+export(bootstrap_transition_index)
 export(bw.inequality.fun)
 export(calcFNWeight)
 export(calcFractionOfIdentity)
 export(calcSOM)
 export(colorAMap)
 export(colorIdentity)
-export(computeIC)
+export(compute_transition_index)
 export(createSingleCellExperiment)
 export(cv2.fun)
 export(dropout.fun)
