Updated downsampling to work with SingleCellExperiment objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,11 +29,10 @@ export(normByBin)
 export(normByWindow)
 export(plotSilhouette)
 export(reduce_dimension)
-export(simulatescSeq)
 export(theils.between)
 export(theils.t)
 export(theils.within)
-export(thin.counts)
+export(thin_counts)
 export(umap)
 export(visMarkerBar)
 export(visMarkerViolin)
