Exported hdbscan for matrix inputs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(filter_genes)
 export(generate_mutationhash)
 export(gini.fun)
 export(hdbscan)
+export(hdbscan_)
 export(heterogeneity)
 export(hexcoords2)
 export(hvg)
