Added functionality for 2D QC maps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(bw.inequality.fun)
 export(calcFNWeight)
 export(calcFractionOfIdentity)
 export(calcSOM)
+export(calculate_qc_map)
 export(colorAMap)
 export(compute_transition_index)
 export(createSingleCellExperiment)
@@ -33,6 +34,7 @@ export(normByBin)
 export(normByWindow)
 export(plotSilhouette)
 export(reduce_dimension)
+export(tSOM)
 export(theils.between)
 export(theils.t)
 export(theils.within)
