--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,6 @@ Imports:
     SummarizedExperiment,
     SingleCellExperiment,
     scater,
-    biomaRt
+    biomaRt,
+    Rtsne
 RoxygenNote: 6.0.1
