--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(compute_transition_index)
 export(createSingleCellExperiment)
 export(cv2.fun)
 export(dropout.fun)
+export(filter_cells)
 export(filter_genes)
 export(generate_mutationhash)
 export(gini.fun)
@@ -34,6 +35,7 @@ export(normByBin)
 export(normByWindow)
 export(plotSilhouette)
 export(reduce_dimension)
+export(scaterIsOutlier)
 export(tSOM)
 export(theils.between)
 export(theils.t)
