Added TF-IDF weighting.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(plotSilhouette)
 export(reduce_dimension)
 export(scaterIsOutlier)
 export(tSOM)
+export(tf_idf)
 export(theils.between)
 export(theils.t)
 export(theils.within)
