Updated sample/feature filter functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ export(compute_transition_index)
 export(createSingleCellExperiment)
 export(cv2.fun)
 export(dropout.fun)
-export(filter_cells)
-export(filter_genes)
+export(filter_features)
+export(filter_samples)
 export(generate_mutationhash)
 export(gini.fun)
 export(hdbscan)
