Added filter functons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(":=")
 export(EpOverA)
 export(FanoOverA)
+export(MeanBelowA)
+export(MeanOverA)
 export(add_clustering)
 export(add_fraction_of_identity)
 export(add_heterogeneity)
