Added convenience function to discover elements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(colorAMap)
 export(compute_transition_index)
 export(createSingleCellExperiment)
 export(cv2.fun)
+export(discover_element)
 export(dropout.fun)
 export(filter_features)
 export(filter_samples)
