Implemented Fano function for heterogeneity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(createSingleCellExperiment)
 export(cv2.fun)
 export(discover_element)
 export(dropout.fun)
+export(fano.fun)
 export(filter_features)
 export(filter_samples)
 export(generate_mutationhash)
