Added isoMDS as dimensionality reduction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(hexcoords2)
 export(hvg)
 export(hvg.plot)
 export(inequality.fun)
+export(isomds)
 export(norm.theil.t)
 export(normByBin)
 export(normByWindow)
