Exported rsvd, fixed bug during SV skipping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(norm.theil.t)
 export(normByBin)
 export(normByWindow)
 export(plotSilhouette)
+export(randomized_svd)
 export(reduce_dimension)
 export(scaterIsOutlier)
 export(tSOM)
