Removed major parts of the code for maintainability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,51 +7,24 @@ export(FanoOverA)
 export(MeanBelowA)
 export(MeanOverA)
 export(add_clustering)
-export(add_fraction_of_identity)
-export(add_heterogeneity)
 export(add_transition_index)
+export(approximate_svd)
 export(bootstrap_transition_index)
-export(bw.inequality.fun)
-export(calcFNWeight)
-export(calcFractionOfIdentity)
 export(calcSOM)
 export(calculate_qc_map)
-export(colorAMap)
 export(compute_transition_index)
-export(createSingleCellExperiment)
-export(cv2.fun)
 export(discover_element)
-export(dropout.fun)
-export(fano.fun)
 export(filter_features)
 export(filter_samples)
-export(generate_mutationhash)
-export(gini.fun)
 export(hdbscan)
 export(hdbscan_)
-export(heterogeneity)
-export(hexcoords2)
-export(hvg)
-export(hvg.plot)
-export(inequality.fun)
 export(isomds)
-export(norm.theil.t)
-export(normByBin)
-export(normByWindow)
 export(plotSilhouette)
 export(randomized_svd)
 export(reduce_dimension)
 export(scaterIsOutlier)
-export(tSOM)
 export(tf_idf)
-export(theils.between)
-export(theils.t)
-export(theils.within)
-export(thin_counts)
 export(umap)
-export(visMarkerBar)
-export(visSOM)
-export(winsorize)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
