--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: singlecellutils
 Type: Package
 Title: Utility functions for single-cell data
 Version: 0.9.0
-Authors@R: person(given = "Jens", family = "Preussner", email = "jens.preussner@mpi-bn.mpg.de", role = c("aut", "cre"))
+Authors@R: person(given = "Jens", family = "Preussner", email = "jens.preussner@mpi-bn.mpg.de", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1927-3458"))
 Maintainer: Jens Preussner <jens.preussner@mpi-bn.mpg.de>
 Description: The singlecellutils package provides auxillary functions to work with data from single cell RNAseq data.
 License: MIT + file LICENSE
