Cleaned up imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,34 +10,21 @@ LazyData: TRUE
 Imports:
     boot,
     cluster,
-    graphics,
-    grDevices,
-    lattice,
     Matrix,
     methods,
     stats,
-    utils,
-    dplyr,
     ggplot2,
     Hmisc,
     kohonen,
-    lsr,
     magrittr,
-    quadprog,
-    RColorBrewer,
     reticulate,
     rlang,
-    statmod,
-    stringr,
-    viridis,
-    zoo,
-    data.table,
     SummarizedExperiment,
     SingleCellExperiment,
     scater,
-    biomaRt,
     Rtsne,
     irlba,
     WGCNA,
-    rsvd
+    rsvd,
+    MASS
 RoxygenNote: 6.0.1
