--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(add_clustering)
 export(add_transition_index)
 export(approximate_svd)
 export(bootstrap_transition_index)
-export(calcSOM)
 export(calculate_qc_map)
 export(compute_transition_index)
 export(discover_element)
@@ -22,6 +21,7 @@ export(isomds)
 export(plotSilhouette)
 export(randomized_svd)
 export(reduce_dimension)
+export(scSOM)
 export(scaterIsOutlier)
 export(tf_idf)
 export(umap)
