--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(filter_samples)
 export(hdbscan)
 export(hdbscan_)
 export(isomds)
+export(lrde_test)
 export(plotSilhouette)
 export(randomized_svd)
 export(reduce_dimension)
