--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: singlecellutils
 Type: Package
 Title: Utility functions for single-cell data
-Version: 0.9.0
+Version: 1.0.0
 Authors@R: person(given = "Jens", family = "Preussner", email = "jens.preussner@mpi-bn.mpg.de", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1927-3458"))
 Maintainer: Jens Preussner <jens.preussner@mpi-bn.mpg.de>
 Description: The singlecellutils package provides auxillary functions to work with data from single cell RNAseq data.
@@ -36,3 +36,5 @@ Suggests:
     genefilter
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
+URL: https://github.com/jenzopr/singlecellutils
+BugReports: https://github.com/jenzopr/singlecellutils/issues
