Updated website with new vignette

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,4 +29,6 @@ reference:
 articles:
 - title: All vignettes
   desc: ~
-  contents: '`singlecellutils-filtering`'
+  contents:
+    - '`singlecellutils-filtering`'
+    - '`singlecellutils-dimensionreduction`'
