--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(hdbscan)
 export(hdbscan_)
 export(isomds)
 export(lrde_test)
+export(plotComplexHeatmap)
 export(plotSilhouette)
 export(randomized_svd)
 export(reduce_dimension)
